<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.munger.passwordkeeper.MainActivity" >
    
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="search"
          app:showAsAction="always|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView" />
    
    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="edit"
        app:showAsAction="always" />

</menu>
