...
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>-1</item>
    </string-array>

    <string name="alert_okay">Okay</string>
    <string name="confirm_okay">Okay</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_discard">Discard</string>
    <string name="input_okay">Okay</string>
    <string name="input_cancel">Cancel</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">No</string>

...
